Update package.json dependencies and engines
Updated package dependencies and added engines field.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
-{
-  "name": "darkxbot",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "@whiskeysockets/baileys": "latest",
-    "pino": "latest",
-    "qrcode-terminal": "latest"
-  }
+"dependencies": {
+  "@whiskeysockets/baileys": "^3.10.0",
+  "pino": "^8.14.0",
+  "qrcode-terminal": "^0.12.0"
+},
+"engines": {
+  "node": ">=18 <=24"
 }
